# eyeRsee

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  report.xml
.github/ISSUE_TEMPLATE/: -bug-.md  -feature--.md  -refactor-.md
.github/workflows/: build.yml
include/: Channel.hpp  ChannelController.hpp  ClientController.hpp  EventHandler.hpp  Response.hpp  Server.hpp  Sever.hpp  Socket.hpp
include/controller/: BotController.hpp  ChannelController.hpp  ClientController.hpp  Executer.hpp  Executor.hpp
include/core/: Command.hpp  EventHandler.hpp  Parser.hpp  Response.hpp  Server.hpp  Socket.hpp  Type.hpp  Udata.hpp  utility.hpp
include/entity/: Channel.hpp  Client.hpp
include/handler/: ErrorHandler.hpp  EventHandler.hpp  ResponseHandler.hpp
src/: EventHandler.cpp  Response.cpp  Server.cpp  Socket.cpp  main.cpp
src/controller/: BotController.cpp  ChannelController.cpp  ClientController.cpp  Executer.cpp  Executor.cpp  StringController.cpp
src/core/: Command.cpp  EventHandler.cpp  Parser.cpp  Response.cpp  Server.cpp  Socket.cpp  Udata.cpp  utility.cpp
src/entity/: Channel.cpp  Client.cpp
src/handler/: ErrorHandler.cpp  EventHandler.cpp  ResponseHandler.cpp
src/main/: main.cpp
test/: CMakeLists.txt  main.cpp  parsing_test.cpp  test.txt
